k8s/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendra-queue
  namespace: vendra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vendra-queue
  template:
    metadata:
      labels:
        app: vendra-queue
        cpu: "true"
    spec:
      tolerations:
        - key: "cpu"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      nodeSelector:
        cpu: "true"
      containers:
        - name: queue
          image: registry.digitalocean.com/vendra-registry/vendra-queue:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
